objects/Status_Time_Bucket__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>The list of Statuses that are considered as &quot;Internal Status&quot;. Related to the Case Age in Business Hours app, moving away from a Custom Object and using Custom Setting to leverage caching, and not worry about SOQL queries.</description>
    <fields>
        <fullName>Included_in_SLA_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included in SLA Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The exact, *Case Sensitive* Status</description>
        <inlineHelpText>The exact, *Case Sensitive* Status</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Time_Bucket__c</fullName>
        <defaultValue>&quot;Not included in SLA&quot;</defaultValue>
        <label>Time Bucket</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Status Time Bucket</label>
</CustomObject>